--- a/templates/evenement/showClient.html.twig
+++ b/templates/evenement/showClient.html.twig
@@ -51,17 +51,31 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_events_index') }}">back to list</a>
+   
 
-    <a href="{{ path('app_evenement_edit', {'id': evenement.id}) }}">edit</a>
-
-    {{ include('evenement/_delete_form.html.twig') }}
+    
 
     <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
                 Reserver
             </button>
 
+    <!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">New reservation</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        {{form_start(form)}}
+       
+        {{form_errors(form)}}
 
+        {{form_end(form)}}
+      </div>
       <div class="modal-footer">
         {# <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> #}
         {# <button type="submit" class="btn btn-primary">Save changes</button> #}
