--- a/templates/produit/affichage.html.twig
+++ b/templates/produit/affichage.html.twig
@@ -218,8 +218,13 @@
 											<div class="my-2 white_button add_to_cart_button"> <a href="{{ path('app_like_dislike_add', {'idproduit': produit.id,'value':"dislike"}) }}"><i class="fa fa-thumbs-down" style="color: #FF0000;"></i></a></div>
 
 												{% endif %}
-												{% endif %}
 
+												{% endif %}
+												<br> </br>
+												<br> </br>
+											
+										
+<div class="my-2 white_button add_to_cart_button"> <a href="{{ path('app_commentaire_new', {'idproduit': produit.id}) }}">commentaire</a></div>
 											</div>
 											
 										</div>
