--- a/templates/admin/produit/listeProduit.html.twig
+++ b/templates/admin/produit/listeProduit.html.twig
@@ -13,29 +13,7 @@
   </div>
 
 </div>
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">New Category Produit</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        {{form_start(typeForm)}}
-        {{form_errors(typeForm)}}
 
-        {{form_end(typeForm)}}
-      </div>
-      <div class="modal-footer">
-        {# <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> #}
-        {# <button type="submit" class="btn btn-primary">Save changes</button> #}
-      </div>
-    </div>
-  </div>
-</div>
                          
 <hr>
 <div class="card">
@@ -90,10 +68,7 @@
                         {% endfor %}
                         <td>{{ prod.prix }} DT</td>
                         <td>{{ prod.quantite }}</td>
-                        {% if prod.photo %}
-                            {% set imageUrl = vich_uploader_asset(prod, 'imageFile') %}
-                            <td><img style="width:50px;" src="{{ asset(imageUrl) }}" alt="img" /></td>
-                            {% endif %}
+                            <td><img style="width:50px;" src="" alt="img" /></td>
                         <td>{{ prod.categorie.nom }}</td>
 
                         {% if prod.etat == 1 %}
@@ -110,18 +85,7 @@
                             <i class="bx bx-dots-vertical-rounded"></i>
                             </button>
                             <div class="dropdown-menu">
-                            <form action="{{path('app_acceptP',{'id':prod.id})}}">
-                              <button type="submit"  class="dropdown-item"  >
-                                      <i class='bx bx-like'></i> Accept
-                              </button>
-                            </form>
 
-                            <form action="{{path('app_refusP',{'id':prod.id})}}">
-                                <button onclick="return confirm('Are you sure you want to delete this event?')"  class="dropdown-item">
-                                    <i class='bx bx-dislike' ></i> 
-                                    Reject
-                                </button>
-                            </form>
                             </div>
                         </div>
                         </td>
