--- a/templates/authentication/login.html.twig
+++ b/templates/authentication/login.html.twig
@@ -97,9 +97,9 @@
 						<span class="txt1">
 							Forgot
 						</span>
-						<a href="{{ path('forgotten_password') }}" class="txt2">
+						{# <a href="{{ path('forgotten_password') }}" class="txt2">
 							Password?
-						</a>
+						</a> #}
 					</div>
 
 					<div class=" divtxt3 text-center" >
