--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -330,7 +330,7 @@
 								<ul class="navbar_user">
 									<li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
                                     {% if app.user and app.user.getRoles() == 'ROLE_CLIENT'%}
-                                    <li><a href="{{path('app_client')}}"><i class="fa fa-user" aria-hidden="true"></i></a></li>
+                                    <li><a href="{{path('app_client_index')}}"><i class="fa fa-user" aria-hidden="true"></i></a></li>
                                     
                                     {% elseif app.user and app.user.getRoles() == 'ROLE_ADMIN' %}
                                     <li><a href="{{path('app_admin')}}"><i class="fa fa-user" aria-hidden="true"></i></a></li>
