--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -139,14 +139,14 @@
             </li>
 
             <li class="menu-item">
-              <a href="{{ path('app_users') }}" class="menu-link menu-toggle">
+              <a href="{{ path('app_commande_admin') }}" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons bx bx-box"></i>
                 <div data-i18n="Account Settings">Liste des commandes</div>
               </a>
             </li>
 
             <li class="menu-item">
-              <a href="#" class="menu-link menu-toggle">
+              <a href="{{ path('app_products_list') }}" class="menu-link menu-toggle">
                 <i class="menu-icon tf-icons bx bx-copy"></i>
                 <div data-i18n="Account Settings">Liste des produits approvés</div>
               </a>
