--- a/templates/basePartner.html.twig
+++ b/templates/basePartner.html.twig
@@ -114,7 +114,7 @@
             </a>
           </li> #}
           <li>
-            <a href="{{path('app_partner_profile')}}">
+            <a href="">
               <i class="nc-icon nc-single-02"></i>
               <p>User Profile</p>
             </a>
@@ -126,12 +126,12 @@
             </a>
 
           </li>
-          <li>
+          {# <li>
             <a href="{{ path('app_par_commands') }}">
               <i class="nc-icon nc-spaceship"></i>
               <p>Liste des commandes</p>
             </a>
-          </li>
+          </li> #}
           {# <li class="active-pro">
             <a href="./upgrade.html">
               <i class="nc-icon nc-spaceship"></i>
@@ -182,7 +182,7 @@
               </li> #}
               <li class="nav-item btn-rotate dropdown">
                 <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      <img  style="width:30px;" src="{{ vich_uploader_asset(user, 'imageFile') }}" alt="{{ user.username }}"/>
+                      <img  style="width:30px;" src="" alt="{{ user.username }}"/>
 
                   <p>
                     <span class="d-lg-none d-md-block">Some Actions</span>
